--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.14.0",
+    "@supabase/supabase-js": "^1.11.9",
+    "autoprefixer": "^10.2.5",
     "next": "10.2.0",
+    "postcss": "^8.2.13",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "stripe": "^8.146.0",
+    "tailwindcss": "^2.1.2"
   }
 }
